# InvestBot

./: .flake8  .gitignore  README.md  docker-compose.yml
.github/workflows/: python_linter.yml  run_python_tests.yml
backend/auth/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/auth/src/: config.py  main.py
backend/auth/src/api_v1/: __init__.py
backend/auth/src/api_v1/jwt/: schemas.py  utils.py  views.py
backend/project_manager/: pyproject.toml
backend/project_manager/app/core/models/: mixins.py  project.py  token.py  user.py
