[tool.poetry]
name = "project-manager"
version = "0.1.0"
description = ""
authors = ["L4zzur <popovnikita01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
